# integracao_estapar_TA

./: .env.development  .env.production  .gitignore  CHANGELOG  README.md  README.rst  main.py  pyproject.toml  requirements.txt  test.py  totalatacado.db
.github/workflows/: ci.yml
docs/: planejamento_autenticacao.md
scripts/: build_installer.py
src/totalatacadot1/: .env  .env.example  __main__.py  app.py  config.py  controller.py  controller_gui.py  controller_integration_service.py  custom_message_box.py  database.py  dml_tables.py  enums.py  estapar_integration_service.py  gui.py  init_db.py  integration.py  integration_service.py  models.py  notification.py  repository.py  schemas.py  utils.py
src/totalatacadot1/components/: custom_message_box.py
src/totalatacadot1/controllers/: app_controller.py
src/totalatacadot1/data/: control_pdv.db
src/totalatacadot1/gui/: main_widget.py  main_window.py  styles.py  theme.py
src/totalatacadot1/server/: main.py
src/totalatacadot1/services/: estapar_integration_service.py
tests/: totalatacadot1.py  verify_mock_server.py
